[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/power_ups/power_up_effect/ball_effect/BallEffect.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/power_ups/power_up_effect/ball_effect/effects/super_ball/super_ball.gd" type="Script" id=2]
[ext_resource path="res://assets/particles/round_64.png" type="Texture" id=3]
[ext_resource path="res://src/power_ups/power_up_effect/ball_effect/effects/super_ball/ray_poly.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/sphere_512.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 72.0

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 2.37374, 0, 0, Vector2( 1, 1 ), 0.0485534, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.0366492, 0.0994764, 1 )
colors = PoolColorArray( 0.501961, 0.501961, 0.501961, 0, 0.486275, 0.486275, 0.486275, 0.372549, 0.45098, 0.45098, 0.45098, 0 )

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 0.341176, 0.341176, 0.341176, 0.0784314, 0.341176, 0.341176, 0.341176, 0 )

[node name="SuperBall" instance=ExtResource( 1 )]
script = ExtResource( 2 )
_identifier = "SuperBall"

[node name="Area2D" type="Area2D" parent="." index="0"]
monitoring = false
collision_layer = 0
collision_mask = 2147483650

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="." index="1"]
z_index = -1
emitting = false
amount = 120
lifetime = 3.0
local_coords = false
texture = ExtResource( 3 )
emission_shape = 1
emission_sphere_radius = 24.0
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, -10 )
initial_velocity = 20.0
initial_velocity_random = 1.0
angular_velocity = 32.0
angular_velocity_random = 1.0
scale_amount = 0.6
scale_amount_random = 0.2
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="LifeTimer" type="Timer" parent="." index="2"]
wait_time = 6.0
one_shot = true

[node name="Ray" type="Node2D" parent="." index="3"]
script = ExtResource( 4 )

[node name="RayPoly" type="Polygon2D" parent="Ray" index="0"]
visible = false
polygon = PoolVector2Array( 0, 32, 56, 52, 104, 0, 56, -52, 0, -32 )

[node name="Sprite" type="Sprite" parent="Ray/RayPoly" index="0"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Ray" index="1"]
position = Vector2( 112, 0 )
z_index = -1
emitting = false
amount = 200
lifetime = 0.8
local_coords = false
texture = ExtResource( 3 )
emission_shape = 1
emission_sphere_radius = 32.0
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, -40 )
initial_velocity = 10.0
initial_velocity_random = 1.0
linear_accel = 5.0
linear_accel_random = 1.0
scale_amount = 0.5
scale_amount_random = 1.0
color_ramp = SubResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="Timer" type="Timer" parent="Ray" index="2"]
wait_time = 0.06
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="timeout" from="Ray/Timer" to="Ray" method="_on_Timer_timeout"]
